fixed footer on mobile display

--- a/src/styles/home/footer.scss
+++ b/src/styles/home/footer.scss
@@ -16,4 +16,22 @@
     color: $clr-secondary;
     font-weight: 600;
   }
+
+  @media only screen and (max-width: 700px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 100px 0;
+
+    #footer-1 {
+      order: 2;
+    }
+    #footer-2 {
+      order: 1;
+      font-weight: 600;
+    }
+    #footer-3 {
+      order: 3;
+    }
+  }
 }
